--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-timer-hook": "^3.0.8",
+    "use-sound": "^4.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
